--- a/core/themes/default/theme.css
+++ b/core/themes/default/theme.css
@@ -3,19 +3,35 @@
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #000000; }
     h3 { text-align: center; color: #000000; }
-    a { color: #000000; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
     .download { float: right; }
     pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:20px; font-style: italic; }
 body{
+	background-color:#1f1f1f;   	
+}
+#container{
+	margin-top:-10px;
+	margin-bottom:-10px;
   	margin-left:auto;
 	margin-right:auto;
+	padding-top: 50px;
+	padding-bottom: 50px;
 	font-family: Helvetica;
 	color:#444;
 	font-family: Helvetica, Arial, FreeSans, san-serif;
 	width: 500px;
+	background-color:#fff;
+	-webkit-box-shadow: 0 0 5px #000;
+	-moz-box-shadow: 0 0 5px #000;
+	box-shadow: 0 0 5px #000;
+
+}
+#inside{
+	width:400px;
+	margin-left:auto;
+	margin-right:auto;
 }
 h1{
 	text-align: center;
@@ -77,9 +93,9 @@ input {
 hr{
 	height: 3px;
 	background-color: #eaeaea;
-	width:120%;
-	margin-left: -50px;
+	width:450px;
 	border: none;
+	margin-left:-25px;
 }
 #submit{
 	font-size: 16px;
@@ -114,4 +130,20 @@ a:hover{
 }
 p.small-description{
 	margin-top: -10px;
+}
+.pagination ul li{
+	display:inline;
+	margin-right:40px;
+}
+.pagination{text-align:center;}
+li.disabled a{
+	color:#848484;
+} 
+li.active a{
+	background-color:#36c41f;
+	padding:2px;
+	color:#fff;
+}
+li.active a:hover{
+	text-decoration:none;
 }
